# fits_reader_microservice

./: .clang-format  .gitignore  run.sh
controller/: .prettierrc  README.md  bun.lockb  package-lock.json  package.json
controller/src/: index.ts
controller/src/workerPool/: fitsWorker.ts  workerPool.ts
proto/: CMakeLists.txt  build_ts.sh
proto/fitsReaderProto/: file_service.proto
tests/: FileService.http
worker/: CMakeLists.txt  ReaderService.cpp  ReaderService.h  main.cpp
worker/src/: main.cpp
worker/src/services/: ReaderService.cpp  ReaderService.h
